--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.com.csd</groupId>
-	<artifactId>portlet</artifactId>
+	<artifactId>portlet-jpa</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	
-	<name>spring-portlet-mvc</name>
+	<name>exo-portle-jpa</name>
 
 	<properties>
 		<java-version>1.6</java-version>
@@ -22,7 +22,7 @@
 		<org.aspectj-version>1.6.9</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
 		
-		<liferay.deploy.folder>/Users/javiercasalruiz/workspace/Liferay/liferay-portal-6.1.0-ce-ga1/deploy</liferay.deploy.folder>
+		<liferay.deploy.folder>/opt/exo-test-4.3.0/platform-community-4.3.0/webapps</liferay.deploy.folder>
 	</properties>
 	
 	<dependencies>
@@ -162,7 +162,7 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>2.2.8</version>
 			<scope>runtime</scope>
 		</dependency>
 		
